syntax = "proto3";

package tensorflow;
option cc_enable_arenas = true;

message RemoteMemoryRegion {
  string host = 1;
  string port = 2;
  uint64 addr = 3;
  uint32 rkey = 4;
  uint32 tensor_key = 5;
  uint64 checksum = 6;
}
